# llama-cpp-framework

./: .gitignore  00-install-prerequisites.ps1  01-configure.ps1  02-build-webui.ps1  02-build.ps1  03-package.ps1  03-run.ps1  04-run.ps1  05-update-framework.ps1  AGENTS.md  CLAUDE.md  README.md  common.ps1  config.psd1.sample  llama-cpp.nsi.template  relocate-venv.py
.github/workflows/: ci.yml
installer/: dist-pins.psd1  install-runtime-deps.ps1  llama-cpp-framework.nsi.template
llama-cpp-config/: Cargo.toml  README.md  build.rs
llama-cpp-config/src/: cli.rs  devices.rs  form.rs  gguf.rs  gpu_split.rs  gui.rs  ini.rs  integrations.rs  main.rs  model_scan.rs  net_ifaces.rs  paths.rs  presets.rs  proc.rs  runstate.rs  server_cfg.rs  server_form.rs  server_version.rs  settings.rs  single_instance.rs  startup.rs  tensor_override.rs
llama-cpp-config/src/gguf/: ffi.rs
llama-cpp-config/src/gui/: integrations_tab.rs  log_window.rs  models_tab.rs  server_tab.rs  settings_tab.rs  tray.rs
llama-cpp-config/src/tests/: binding_lint.rs  mod.rs  save_flow.rs  ui_bindings.rs
llama-cpp-config/ui/: app.slint  components.slint  integrations_page.slint  log_window.slint  models_page.slint  server_page.slint  settings_page.slint  state.slint  types.slint
patches/: __clang_hip_runtime_wrapper.h
patches/hip/: README.md
patches/hip/23/: __clang_hip_runtime_wrapper.h
resources/: common-functions.ps1  config-model.ps1  config-server.ps1  config-webui.ps1  generate-llama-ico.mjs  run-model.ps1  start-webui.ps1
tools/: report-memory.ps1
