[package]
name = "llama-cpp-config"
version = "1.2.16"
edition = "2021"
build = "build.rs"
description = "GUI + CLI configurator for llama.cpp-framework"
publish = false

[[bin]]
name = "llama-cpp-config"
path = "src/main.rs"

[dependencies]
slint = { version = "1.17", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-skia", "accessibility", "unstable-winit-030", "system-tray"] }
clap = { version = "4.6", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
rfd = { version = "0.17", default-features = false }
if-addrs = "0.15"

[dev-dependencies]
tempfile = "3"
# Headless Slint backend for the UI regression tests (src/tests/ui_bindings.rs).
# Already in the tree as an optional dep of slint; pinned to the same version.
i-slint-backend-testing = "1.17"

[build-dependencies]
slint-build = "1.17"
ico = "0.5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace]
